# kipmsg

./: AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.in  TODO  config.h.in  configure  configure.files  configure.in  configure.in.in  kipmsg-fc.spec  kipmsg-vl.spec  libtool  libtool_freebsd61.patch  sol10_blastwave_configure.sh  subdirs
CVSROOT/: config
admin/: cvs.sh
debian/: changelog  control  copyright  files  rules
doc/: Makefile.am  Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
icons/: Makefile.in
po/: Makefile.in  ja.gmo  ja.po  kipmsg.po  kipmsg.pot  zh_CN.gmo  zh_CN.po
po/ja/: Makefile  Makefile.in  ja.po
spec/: kipmsg-fc.spec  kipmsg-vl.spec
src/: CMakeLists.txt  Makefile.am  Makefile.in  about.cpp  about.h  aboutbase.ui  absenceconfig.cpp  absenceconfig.h  absenceconfigbase.ui  attachedfiledialog.cpp  attachedfiledialog.h  attachedfiledialogbase.ui  clickableurlconfig.cpp  clickableurlconfig.h  clickableurlconfigbase.ui  detailandlogconfig.cpp  detailandlogconfig.h  detailandlogconfigbase.ui  detailconfig.cpp  detailconfig.h  detailconfigbase.ui  downloadcompletedialog.cpp  downloadcompletedialog.h  downloadcompletedialogbase.ui  downloaderrordialog.cpp  downloaderrordialog.h  downloaderrordialogbase.ui  downloadmonitor.cpp  downloadmonitor.h  downloadmonitorbase.ui  encodingconfig.cpp  encodingconfig.h  encodingconfigbase.ui  hideconfigdialog.cpp  hideconfigdialog.h  hideconfigdialogbase.ui  idiomconfig.cpp  idiomconfig.h  idiomconfigbase.ui  kipmsg.desktop  (+56 more)
templates/: cpp
